--- a/web/public/index.html
+++ b/web/public/index.html
@@ -15,8 +15,8 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <meta
       name="Cloud vSwitch"
       content="A secure and streamlined IT independent VPN as a service in the cloud"
